feat: add 2fa api support (#274)
* feat: add 2fa api support

* chore: remove config db yaml file

* chore: add user twoFactorSecret

* fix: fix 2fa bug

* feat: add 2fa view

* feat: add 2fa card

* fix: 2fa work

* feat: 2fa work

* fix: bug fix
